--- a/html/misGifos.html
+++ b/html/misGifos.html
@@ -15,19 +15,15 @@
         <input id="checkbox" type="checkbox">
         <label for="checkbox"><span></span></label>
         <div class="logomobile">
-            <a href=""><img src="../assets/logo/logo-mobile.svg" alt="logo"></a>
+            <a href="./index.html"><div></div></a>
         </div>
         <div class="logodesk">
-            <a href="./index.html"><img src="../assets/logo/logo-desktop.svg" alt="logo"></a>
-        </div>
-        <div class="navheader">
-            <input type="text" placeholder="Busca GIFOS y más">
-            <img src="../assets/icon-search.svg" alt="backgroundImg">
+            <a href="./index.html"><div></div></a>
         </div>
         <ul>
             <li><a href="#" id="darkness">MODO NOCTURNO</a></li>
             <div class="greyline"></div>
-            <li><a href="./favoritos.html">FAVORITOS</a></li>
+            <li><a id="gotofav" href="./favoritos.html">FAVORITOS</a></li>
             <div class="greyline"></div>
             <li><a style="color: #9CAFC3;" href="./misGifos.html">MIS GIFOS</a></li>
             <div class="greyline"></div>
@@ -45,10 +41,11 @@
             <img src="../assets/misgifos/icon-mis-gifos-sin-contenido.svg" alt="sin-contenido">
             <h3>¡Anímate a crear tu primer GIFO!</h3>
         </div>
-        <div class="misgifos">
+        <div class="gifobuilder misgifos">
         </div>
-        <div class="btn">
-            <img id="showmore" src="../assets/viewmorebtn/CTA-ver-mas.svg" alt="ver mas">
+        <div class="container_btn"> 
+            <div class="btn--misgifos">
+            </div>
         </div>
 
     <div class="trendinggifos">
@@ -57,8 +54,15 @@
             <p>Mira los últimos GIFOS de nuestra comunidad.</p>
         </div>
         <div class="gallery">
-            <h4></h4>
-            <p></p>
+            <div class="arrows" >
+                <img src="../assets/arrow/left/button-slider-left.svg" alt="arrowleft" id="left">
+            </div>
+                <div id="gifs">
+                    
+                </div>
+            <div class="arrows">
+                <img src="../assets/arrow/right/button-slider-right.svg" alt="arrowright" id="right">
+            </div>
         </div>
     </div>
     </main>
@@ -66,12 +70,12 @@
     <footer>
         <p>Compartir en:</p>
         <div class="sharing">
-            <img src="../assets/facebook/icon_facebook.svg" alt="" id="facebook">
-            <img src="../assets/twitter/icon_twitter.svg" alt="" id="twitter">
-            <img src="../assets/insta/icon_instagram.svg" alt="" id="insta">
+            <a href="https://www.facebook.com/"><div id="facebook"></div></a>
+            <a href="https://twitter.com/?lang=es"><div id="twitter"></div></a>
+            <a href="https://www.instagram.com/?hl=es-la"><div id="insta"></div></a>
         </div>
         <div class="copyright">© GIFOS 2021 All Rights Reserved.</div>
-        <script src="../javascript/index.js" ></script>
+        <script src="../javascript/index.js"></script>
     </footer>
     <div class="blueline"></div>
 </body>
