--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
             <div class="greyline"></div>
         </ul>
         <div class="plusbtn">
-            <a href="./creargifo.html"><div id="creategift"></a>
+            <a href="./creargifo.html"><div></div> </a>
         </div>
     </header>
     <main id="main">
