Finished adjusting Trending

--- a/html/misGifos.html
+++ b/html/misGifos.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <main id="main">
-        <div class="gifosimg">
+        <div class="gifosimg" id="mis_gifos">
             <img src="../assets/misgifos/icon-mis-gifos.svg" alt="">
             <h1>Mis GIFOS</h1>
         </div>
