--- a/html/index.html
+++ b/html/index.html
@@ -59,6 +59,10 @@
         <div id="gifobuilder">
             
         </div>
+        <div class="empty-search hidden">
+            <img src="../assets/searching/icon-busqueda-sin-resultado.svg" alt="">
+            <h3>Intenta con otra búsqueda</h3>
+        </div>
         <div class="container_btn"> 
             <div class="btn--index">
 
@@ -70,14 +74,12 @@
                 <p>Mira los últimos GIFOS de nuestra comunidad.</p>
             </div>
             <div class="gallery">
-                <div class="arrows" >
-                    <img src="../assets/arrow/left/button-slider-left.svg" alt="arrowleft" id="left">
+                <div class="arrows" id="left" >
                 </div>
                     <div id="gifs">
                         
                     </div>
-                <div class="arrows">
-                    <img src="../assets/arrow/right/button-slider-right.svg" alt="arrowright" id="right">
+                <div class="arrows" id="right">
                 </div>
             </div>
         </div>
