--- a/html/creargifo.html
+++ b/html/creargifo.html
@@ -99,5 +99,6 @@
     </footer>
     <div class="blueline"></div>
     <script src="../javascript/creargifo.js"></script>
+    <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 </body>
 </html>
