--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <h2 id="searchResult"></h2>
-        <div id="gifobuilder">
+        <div id="gifobuilder" class="hidden">
             
         </div>
         <div class="empty-search hidden">
@@ -64,7 +64,12 @@
             <h3>Intenta con otra búsqueda</h3>
         </div>
         <div class="container_btn"> 
-            <div class="btn--index">
+            <div class="btn--favoritos hidden">
+            </div>
+            <div class="btn--index hidden">
+
+            </div>
+            <div class="btn--misgifos hidden">
 
             </div>
         </div>
@@ -96,8 +101,6 @@
             <h2 id="gif_username">Nyan cat (original)</h2>
             </div>
             <div class="actions">
-<!--             <div class="favorites" id="popup__btn--fav"></div>
-            <div class="download" id="popup__btn--down"></div> -->
             </div>
         </div>
         </div>
