--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -22,11 +22,8 @@
         </div>
         <ul>
             <li><a href="#" id="darkness">MODO NOCTURNO</a></li>
-            <div class="greyline"></div>
             <li><a id="gotofav" style="color: #9CAFC3;" href="./favoritos.html">FAVORITOS</a></li>
-            <div class="greyline"></div>
             <li><a href="./misGifos.html">MIS GIFOS</a></li>
-            <div class="greyline"></div>
         </ul>
         <div class="plusbtn">
             <a href="./creargifo.html"><div></div> </a>
@@ -82,7 +79,7 @@
         <div class="maximizar__container">
         <div class="maximizar__container-close" id="popup__btn--cross"></div>
         <div class="maximizar__container-image">
-            <img src="../assets/images/Nyan Cat GIF.gif" alt="Nyan Cat" id="popup__gif--max">
+            <img src="NotEmpty" alt="Nyan Cat" id="popup__gif--max">
         </div>
         <div class="maximizar__container-data">
             <div class="text">
