--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <div class="trending">
             <div>
                 <h4>Trending</h4>
-                <p>Reactions, Entertainment, Sports, Stickers, Artists</p>
+                <div id="container-trending"></div>
             </div>
         </div>
         <h2 id="searchResult"></h2>
