--- a/html/index.html
+++ b/html/index.html
@@ -113,5 +113,6 @@
     </footer>
     <div class="blueline" id="bottom_blue"></div>
     <script src="../javascript/index.js" ></script>
+    <script src="../javascript/trending.js"></script>
 </body>
 </html>
