Fixing Search Title rotation

--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,7 @@
         </div>
         </div>
     </section>
+    <!--\add trb special 1 @Cris#6689 -->
     <footer id="footer">
         <p>Compartir en:</p>
         <div class="sharing">
