Adding suggestion list

--- a/html/creargifo.html
+++ b/html/creargifo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
     <title>crearGifos</title>
 </head>
-<body>
+<body id="body">
     <div class="blueline"></div>
     <header id="sticky">
         <input id="checkbox" type="checkbox">
