--- a/html/misGifos.html
+++ b/html/misGifos.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <title>GIFOS-J-misGifos</title>
 </head>
-<body>
+<body id="body">
     <div class="blueline" id="top_blue"></div>
     <header id="sticky">
         <input id="checkbox" type="checkbox">
