--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
     <title>GIFOS-J</title>
 </head>
-<body>
+<body id="body">
     <div class="blueline" id="top_blue"></div>
     <header id="sticky">
         <input id="checkbox" type="checkbox">
@@ -42,8 +42,9 @@
         <nav id="nav">
             <img src="../assets/ilustra_header.svg" alt="backgroundImg">
             <div class="navsphere">
-                <input type="text" placeholder="Busca GIFOS y más" id="buscador">
+                <input autocomplete="off" type="text" placeholder="Busca GIFOS y más" id="buscador" >
                 <img src="../assets/searching/icon-search.svg" alt="searchIcon" id="buscadoranimation">
+                <div class="nav_container--suggestions hidden"></div>
             </div>
         </nav>
         <div class="trending">
