--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -54,8 +54,9 @@
         <nav id="nav" class="hidden">
             <img src="../assets/ilustra_header.svg" alt="backgroundImg">
             <div class="navsphere">
-                <input type="text" placeholder="Busca GIFOS y más" id="buscador">
+                <input autocomplete="off" type="text" placeholder="Busca GIFOS y más" id="buscador" >
                 <img src="../assets/searching/icon-search.svg" alt="searchIcon" id="buscadoranimation">
+                <div class="nav_container--suggestions hidden"></div>
             </div>
         </nav>
         
