Adjusting effects on Mobile

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             <a href="./index.html"><div></div></a>
         </div>
 
-        <ul>
+        <ul id="ul--header">
             <li><a href="#" id="darkness">MODO NOCTURNO</a></li>
             <li><a id="gotofav" href="./favoritos.html">FAVORITOS</a></li>
             <li><a href="./misGifos.html">MIS GIFOS</a></li>
