--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,10 @@
             <img src="../assets/ilustra_header.svg" alt="backgroundImg">
             <div class="navsphere">
                 <input autocomplete="off" type="text" placeholder="Busca GIFOS y más" id="buscador" >
-                <img src="../assets/searching/icon-search.svg" alt="searchIcon" id="buscadoranimation">
+                <div>
+                    <img src="../assets/searching/icon-search.svg" alt="searchIcon" id="buscadoranimation">
+                    <img class="hidden" src="../assets/loadingcheck/failed.svg" alt="clearNav" id="closer-input">
+                </div>
                 <div class="nav_container--suggestions hidden"></div>
             </div>
         </nav>
